--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -52,7 +52,7 @@ p {
 #menu {
     top: 0;
     left: 0;
-    height: 4.5vw;
+    height: 2.5vw;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -123,7 +123,7 @@ body {
 <body>
       
     
-<ul id="menu" class"menu">
+<ul id="menu" class"menu"><style="font-color: white">
   <li><a class="active" href="mvp.html">Home</a></li>
   <li><a class="active" href="aboutuspage.html">About</a></li>
   <li><a class="active" href="gallery.html">Gallery</a></li>
@@ -147,7 +147,7 @@ body {
 
 <div class="container">    
     <div class="row">
-      <!--<div style= "font-family:'Amatica SC'">-->
+      <!--<div style= "font-">-->
        <div class="col-sm-3">      
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Maliha">
