--- a/contactus.html
+++ b/contactus.html
@@ -55,3 +55,7 @@ li a:hover:not(active) {
   <li><a class="active" href="gallery.html">Gallery</a></li>
   <li><a class="active" href="contactus.html">Contact Us</a></li>
 </ul>
+
+      <h1>A Whole world waiting to be discovered...<br>
+    click BEGIN </h1>
+ 
