--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -124,6 +124,7 @@ body {
       
     
 <ul id="menu" class"menu"><style="font-color: white">
+  <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
   <li><a class="active" href="mvp.html">Home</a></li>
   <li><a class="active" href="aboutuspage.html">About</a></li>
   <li><a class="active" href="gallery.html">Gallery</a></li>
