--- a/contactus.html
+++ b/contactus.html
@@ -14,11 +14,11 @@
     position: fixed;
     background-color: #055C70;
 }
-    
+
 li {
     float: left;
 }
-  
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -27,8 +27,8 @@ ul {
     background-color: #ffdace;
     position: fixed;
     height: 8%;
-} 
-  
+}
+
 li a {
     display: block;
     color: #000;
@@ -42,8 +42,23 @@ li a:hover:not(active) {
     background-color: #555;
     color: white;
 }
+body {
+  font-family: 'Amatica SC';font-size: 22px;
+}
+h1 {
+  color: black;
+  text-align: center;
+}
+p {
+  font-family: verdana;
+  font-size: 20px;
+  text-align: center;
+  align-items: middle;
+  align-self: middle;
+  vertical-align:middle;
+}
 </style>
-  
+
 <head>
   <h1 style="text-align:center;color:white;font-size:2vw;font-family: 'Amatica SC'">Gallery</h1>
 </head>
@@ -56,6 +71,4 @@ li a:hover:not(active) {
   <li><a class="active" href="contactus.html">Contact Us</a></li>
 </ul>
 
-      <h1>A Whole world waiting to be discovered...<br>
-    click BEGIN </h1>
- 
+  <h1>CONTACT US <br> US THE CREATORS </h1>
