--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -7,6 +7,19 @@ body {
     margin: 0;
 }
 
+body {
+  font-family: 'Amatica SC';font-size: 22px;
+}
+    
+p {
+  font-family: verdana;
+  font-size: 20px;
+  text-align: center;
+  align-items: middle;
+  align-self: middle;
+  vertical-align:middle;
+}
+
 .zoomin img {
   height: 300px;
   width: 300px;
