--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -136,7 +136,7 @@ body {
 <body>
       
     
-<ul id="menu" class"menu"><style="color:white;">
+<ul id="menu" class"menu" style="color:white;">
   <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
   <li><a class="active" href="mvp.html">Home</a></li>
   <li><a class="active" href="aboutuspage.html">About</a></li>
