--- a/contactus.html
+++ b/contactus.html
@@ -71,4 +71,4 @@ p {
   <li><a class="active" href="contactus.html">Contact Us</a></li>
 </ul>
 
-  <h1>CONTACT US <br> US THE CREATORS </h1>
+  <h1>CONTACT US <br>THE CREATORS <br> Maliha Islam <br> Mariana Vazquez <br> Ginevra Godwim<br> Noelia Cabajal</h1>
