--- a/adventure.html
+++ b/adventure.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="https://use.fontawesome.com/138f5edfea.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
 <body>
   <div class="col-left col-display"><img id="air-img" src="air-painted.jpg" style="display:none; max-width: 800px;">
