--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -55,7 +55,6 @@ p {
 p {
     font-family: 'Amatica SC';
     font-size: 1vw;
-    color: black;
 }
 
 /*p.thick {
@@ -138,10 +137,10 @@ body {
     
 <ul id="menu" class"menu" style="color:white;">
   <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
-  <li><a class="active" href="mvp.html">Home</a></li>
-  <li><a class="active" href="aboutuspage.html">About</a></li>
-  <li><a class="active" href="gallery.html">Gallery</a></li>
-  <li><a class="active" href="contactus.html">Contact Us</a></li>
+  <li><a style="color:white;" class="active" href="mvp.html">Home</a></li>
+  <li><a style="color:white;" class="active" href="aboutuspage.html">About</a></li>
+  <li><a style="color:white;" class="active" href="gallery.html">Gallery</a></li>
+  <li><a style="color:white;" class="active" href="contactus.html">Contact Us</a></li>
 </ul>
  
 <div>
