--- a/slideshowair.html
+++ b/slideshowair.html
@@ -14,19 +14,6 @@ body {font-family: Verdana,sans-serif; background-color: black}
   margin: auto;
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-
-/* The dots/bullets/indicators */
 .dot {
   height: 13px;
   width: 13px;
@@ -105,7 +92,7 @@ body {font-family: Verdana,sans-serif; background-color: black}
 </div>
 
 <div class="mySlides fade">
-  <img src="air-painted.jpg" style="width:100%">
+  <img src="air-painted.jpg" style="position: left top; max-width: 800px">
 </div>
 </div>
 
