--- a/gallery.html
+++ b/gallery.html
@@ -47,6 +47,18 @@ li a:hover:not(active) {
     background-color: #555;
     color: white;
 }
+  h1 {
+  color: black;
+  text-align: center;
+}
+p {
+  font-family: verdana;
+  font-size: 20px;
+  text-align: center;
+  align-items: middle;
+  align-self: middle;
+  vertical-align:middle;
+}
 </style>
   
 <head>
