--- a/gallery.html
+++ b/gallery.html
@@ -66,11 +66,12 @@ p {
 </head>
 <body>
 
-<ul id="menu" class"menu">
-  <li><a class="active" href="mvp.html">Home</a></li>
-  <li><a class="active" href="aboutuspage.html">About</a></li>
-  <li><a class="active" href="gallery.html">Gallery</a></li>
-  <li><a class="active" href="contactus.html">Contact Us</a></li>
+<ul id="menu" class"menu" style="color:white;">
+  <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
+  <li><a style="color:white;" class="active" href="mvp.html">Home</a></li>
+  <li><a style="color:white;" class="active" href="aboutuspage.html">About</a></li>
+  <li><a style="color:white;" class="active" href="gallery.html">Gallery</a></li>
+  <li><a style="color:white;" class="active" href="contactus.html">Contact Us</a></li>
 </ul>
   
   <img align="middle" src="air-painted.jpg" style="display: block; max-width: 800px">
