--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,10 @@ body   {
   background-size: cover;
   background-position: center;
 }
+  
+body {
+  font-family: 'Amatica SC';font-size: 22px;
+}
 
  #menu {
     top: 0;
