--- a/contactus.html
+++ b/contactus.html
@@ -71,4 +71,4 @@ p {
   <li><a class="active" href="contactus.html">Contact Us</a></li>
 </ul>
 
-  <h1>GET IN TOUCH WITH A HUMAN<br>(THE CREATORS) <br> Maliha Islam <br> Mariana Vazquez <br> Ginevra Godwim<br> Noelia Cabajal</h1>
+  <h1>GET IN TOUCH WITH A HUMAN<br>(THE CREATORS) <br> Maliha Islam <br> Mariana Vazquez <br> Ginevra Godwin<br> Noelia Cabajal</h1>
