--- a/contactus.html
+++ b/contactus.html
@@ -92,14 +92,14 @@ p {
   <li><a class="active" href="contactus.html">Contact Us</a></li>
 </ul>
 
-  <h1>GET IN TOUCH WITH A HUMAN<br>(THE CREATORS) <br> Maliha Islam <br> Mariana Vazquez <br> Ginevra Godwin<br> Noelia Cabajal</h1>
+  <h1>GET IN TOUCH WITH A HUMAN<br>(THE CREATORS) <!--<br> Maliha Islam <br> Mariana Vazquez <br> Ginevra Godwin<br> Noelia Cabajal--></h1>
     
 -----------------------------------------------------
         <div class="dropdown">
-             <span>Maliha Islam</span>
-             <div class="dropdown-content">
-                 <p>socials go here</p>
-             </div>
+          <span>Maliha Islam</span>
+          <div class="dropdown-content">
+              <p>socials go here</p>
+          </div>
         </div>
 
         <div class="dropdown">
@@ -124,6 +124,5 @@ p {
         </div>
 ------------------------------------------------------
     
-</div>
 </head>
 </html>
