--- a/contactus.html
+++ b/contactus.html
@@ -95,6 +95,7 @@ p {
   <h1>GET IN TOUCH WITH A HUMAN<br>(THE CREATORS) <!--<br> Maliha Islam <br> Mariana Vazquez <br> Ginevra Godwin<br> Noelia Cabajal--></h1>
     
 -----------------------------------------------------
+<div style="">
         <div class="dropdown">
           <span>Maliha Islam</span>
           <div class="dropdown-content">
