--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -149,7 +149,7 @@ body {
 </div>
     
 <div class="zoomin">
-<img class="circular--square" src="castle.jpg" alt="Castle"> <!--style="width:40vw" "width=400" height=300"-->
+<img class="circular--square" src="GWC.jpg" alt="GWC"> <!--style="width:40vw" "width=400" height=300"-->
 </div>
 <p style="color:black; text-align:center;font-size:2.5vw;font-family: 'Amatica SC';font-weight: bold;">The Creators of this website have worked for hours to overcome simple frustrations of one missing quotaion mark or a simple syntax error, frustrations only coders would understand.
    But, through the flames of struggle that we've endured comes this amazing project and as unfinished it may seem we are all very proud of it. </p>
