--- a/contactus.html
+++ b/contactus.html
@@ -99,7 +99,7 @@ p {
         <div class="dropdown">
           <span>Maliha Islam</span>
           <div class="dropdown-content">
-              <p>socials go here</p>
+              <p>LINKEDIN: <br> Github: <br>Gmail: <br>Snapchat:  </p>
           </div>
         </div>
 <br>
@@ -107,7 +107,7 @@ p {
         <div class="dropdown">
           <span>Mariana Vazquez</span>
           <div class="dropdown-content">
-            <p>socials go here</p>
+            <p>LINKEDIN: <br> Github: <br>Gmail: <br>Snapchat:</p>
           </div>
         </div>
 <br>
@@ -115,7 +115,7 @@ p {
         <div class="dropdown">
           <span>Ginevra Godwin</span>
           <div class="dropdown-content">
-            <p>socials go here</p>
+            <p>LINKEDIN: <br> Github: <br>Gmail: <br>Snapchat:</p>
           </div>
         </div>
 <br>
@@ -123,7 +123,7 @@ p {
         <div class="dropdown">
           <span>Noelia Cabajal</span>
           <div class="dropdown-content">
-            <p>socials go here</p>
+            <p>LINKEDIN: <br> Github: <br>Gmail: <br>Snapchat:</p>
           </div>
         </div>
 ------------------------------------------------------
