--- a/contactus.html
+++ b/contactus.html
@@ -99,7 +99,7 @@ p {
         <div class="dropdown">
           <span>Maliha Islam</span>
           <div class="dropdown-content">
-              <p>LINKEDIN: <br> Github: <br>Gmail: <br>Snapchat:  </p>
+              <p>LIinkDIn: Maliha Islam <br> Github: malihai1010 <br>Gmail: Maliha1010@gmail.com <br>Snapchat: Maliha1010 </p>
           </div>
         </div>
 <br>
@@ -107,7 +107,7 @@ p {
         <div class="dropdown">
           <span>Mariana Vazquez</span>
           <div class="dropdown-content">
-            <p>LINKEDIN: <br> Github: <br>Gmail: <br>Snapchat:</p>
+            <p>LinkedIn: Noelia Carbajal<br> Github: ncarbajal <br>Gmail: noeliacarbajal04@gmail.com <br>Snapchat: ncarbajal04</p>
           </div>
         </div>
 <br>
@@ -123,7 +123,7 @@ p {
         <div class="dropdown">
           <span>Noelia Cabajal</span>
           <div class="dropdown-content">
-            <p>LINKEDIN: <br> Github: <br>Gmail: <br>Snapchat:</p>
+            <p>LinkedIn: Mariana Vazquez <br> Github: Marmar897 <br>Gmail: mariana.vazquez7033@gmail.com <br>Snapchat: Marmar897</p>
           </div>
         </div>
 ------------------------------------------------------
