--- a/contactus.html
+++ b/contactus.html
@@ -99,7 +99,7 @@ p {
         <div class="dropdown">
           <span>Maliha Islam</span>
           <div class="dropdown-content">
-              <p>LIinkDIn: Maliha Islam <br> Github: malihai1010 <br>Gmail: Maliha1010@gmail.com <br>Snapchat: Maliha1010 </p>
+              <p>LinkedIn: Maliha Islam <br> Github: malihai1010 <br>Gmail: Maliha1010@gmail.com <br>Snapchat: Maliha1010 </p>
           </div>
         </div>
 <br>
@@ -115,7 +115,7 @@ p {
         <div class="dropdown">
           <span>Ginevra Godwin</span>
           <div class="dropdown-content">
-            <p>LINKEDIN: <br> Github: <br>Gmail: <br>Snapchat:</p>
+            <p>LinkedIn: <br> Github: <br>Gmail: <br>Snapchat:</p>
           </div>
         </div>
 <br>
