--- a/contactus.html
+++ b/contactus.html
@@ -99,7 +99,7 @@ p {
         <div class="dropdown">
           <span>Maliha Islam</span>
           <div class="dropdown-content">
-              <p>LinkedIn: Maliha Islam <br> Github: malihai1010 <br>Gmail: Maliha1010@gmail.com <br>Snapchat: Maliha1010 </p>
+              <h1>LinkedIn: Maliha Islam <br> Github: malihai1010 <br>Gmail: Maliha1010@gmail.com <br>Snapchat: Maliha1010 </h1>
           </div>
         </div>
 <br>
@@ -107,7 +107,7 @@ p {
         <div class="dropdown">
           <span>Noelia Cabajal</span>
           <div class="dropdown-content">
-            <p>LinkedIn: Noelia Carbajal<br> Github: ncarbajal <br>Gmail: noeliacarbajal04@gmail.com <br>Snapchat: ncarbajal04</p>
+            <p class=p>LinkedIn: Noelia Carbajal<br> Github: ncarbajal <br>Gmail: noeliacarbajal04@gmail.com <br>Snapchat: ncarbajal04</p>
           </div>
         </div>
 <br>
@@ -115,7 +115,7 @@ p {
         <div class="dropdown">
           <span>Ginevra Godwin</span>
           <div class="dropdown-content">
-            <p>LinkedIn: <br> Github: <br>Gmail: <br>Snapchat:</p>
+            <p class=body>LinkedIn: <br> Github: <br>Gmail: <br>Snapchat:</p>
           </div>
         </div>
 <br>
