--- a/contactus.html
+++ b/contactus.html
@@ -107,7 +107,7 @@ p {
         <div class="dropdown">
           <span>Noelia Cabajal</span>
           <div class="dropdown-content">
-            <p class=p>LinkedIn: Noelia Carbajal<br> Github: ncarbajal <br>Gmail: noeliacarbajal04@gmail.com <br>Snapchat: ncarbajal04</p>
+            <h1> LinkedIn: Noelia Carbajal<br> Github: ncarbajal <br>Gmail: noeliacarbajal04@gmail.com <br>Snapchat: ncarbajal04</h1>
           </div>
         </div>
 <br>
@@ -115,7 +115,7 @@ p {
         <div class="dropdown">
           <span>Ginevra Godwin</span>
           <div class="dropdown-content">
-            <p class=body>LinkedIn: <br> Github: <br>Gmail: <br>Snapchat:</p>
+            <h1>LinkedIn: <br> Github: <br>Gmail: <br>Snapchat:</h1>
           </div>
         </div>
 <br>
@@ -123,7 +123,7 @@ p {
         <div class="dropdown">
           <span>Mariana Vazquez</span>
           <div class="dropdown-content">
-            <p>LinkedIn: Mariana Vazquez <br> Github: Marmar897 <br>Gmail: mariana.vazquez7033@gmail.com <br>Snapchat: Marmar897</p>
+            <h1>LinkedIn: Mariana Vazquez <br> Github: Marmar897 <br>Gmail: mariana.vazquez7033@gmail.com <br>Snapchat: Marmar897</h1>
           </div>
         </div>
 
