--- a/contactus.html
+++ b/contactus.html
@@ -94,10 +94,10 @@ p {
 
   <h1>GET IN TOUCH WITH A HUMAN<br>(THE CREATORS) <!--<br> Maliha Islam <br> Mariana Vazquez <br> Ginevra Godwin<br> Noelia Cabajal--></h1>
     
------------------------------------------------------
+
 <div style="">
         <div class="dropdown">
-          <span>Maliha Islam</span>
+          <h1>Maliha Islam</h1>
           <div class="dropdown-content">
               <h1>LinkedIn: Maliha Islam <br> Github: malihai1010 <br>Gmail: Maliha1010@gmail.com <br>Snapchat: Maliha1010 </h1>
           </div>
