--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -109,8 +109,8 @@ img {
 </div>
 <br>
 <!--<div style="margin-left:15%;padding:1px 16px;height:1000px;">-->
-<p style="text-align:center;font-size:2vw;font-family: 'Amatica SC'">The Creators of this website have worked for hours to overcome simple frustraations of one missing quotaion mark or a simple syntax error, frustrations only coders would understand.
-   But, through the flames of struggle that we've endured comes this amazing project and as unfinished it may seem we are all very proud of it. </p>
+<p style="text-align:center;font-size:2vw;font-family: 'Amatica SC'">The creators of this website have worked for hours to overcome simple frustrations such as a missing quotaion mark or a simple syntax error, frustrations only coders would understand.
+   But through the flames of struggle that we've endured comes this amazing project and as unfinished as it may seem, we are all very proud of it. </p>
 <p style="text-align:center;font-size:2vw">Let's get a little personal</p>
 
 <div class="container">    
