--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -151,8 +151,8 @@ body {
 <div class="zoomin">
 <img class="circular--square" src="GWC.jpg" alt="GWC"> <!--style="width:40vw" "width=400" height=300"-->
 </div>
-<p style="color:black; text-align:center;font-size:2.5vw;font-family: 'Amatica SC';font-weight: bold;">The Creators of this website have worked for hours to overcome simple frustrations of one missing quotaion mark or a simple syntax error, frustrations only coders would understand.
-   But, through the flames of struggle that we've endured comes this amazing project and as unfinished it may seem we are all very proud of it. </p>
+<p style="color:black; text-align:center;font-size:2.5vw;font-family: 'Amatica SC';font-weight: bold;">The creators of this website have worked for hours to overcome simple frustrations such as a missing quotation mark or a simple syntax error - frustrations only coders would understand.
+   But through the flames of struggle that we've endured comes this amazing project and as unfinished as it may seem, we are all very proud of it. </p>
 <br>
 <!--<div style="margin-left:15%;padding:1px 16px;height:1000px;">-->
 
