--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -165,7 +165,7 @@ body {
         <div class="zoomin">
             <img class="circular--square2" src="windowcolumbiapic.png" alt="Maliha">
             <h2 style="color:black;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Maliha</h2>
-            <p style="color:black;font-size:1.7vw;text-align:center">I was born on October 10, 2000. I attend Queens High School for the Sciences and am now a senior, meaning college applications and less hair (woohoo). I love music (especially singing) and occasionally drawing, even though the mess of paint afterwards is exhausting. I have just learned how to code so bear with me, please!</p>
+            <p style="color:black;font-size:1.7vw;text-align:center">I was born on October 10, 2000. I attend Queens High School for the Sciences and am now a senior, meaning college applications and less hair (woohoo). I love music (especially singing) and occasionally painting, even though the mess of paint afterwards is exhausting. I don't sleep very much and I've pulled a few allnighters for this website so enjoy!</p>
         </div>
       </div>
         <div class="zoomin">
