--- a/gallery.html
+++ b/gallery.html
@@ -3,13 +3,16 @@
 <style>
 <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
 body   {  
-  background-image: url("galaxy1.jpg");
+  background-image: url("watercolor.jpg");
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
 }
   
 body {
-  font-family: 'Amatica SC';font-size: 22px;
+  font-family:'Amatica SC';
+  font-size: 22px; 
+  color:black;
 }
 
  #menu {
@@ -56,7 +59,7 @@ li a:hover:not(active) {
   text-align: center;
 }
 p {
-  font-family: verdana;
+  font-family: 'Amatica SC';
   font-size: 20px;
   text-align: center;
   align-items: middle;
@@ -79,15 +82,15 @@ p {
 </ul>
   
   <img align="middle" src="air-painted.jpg" style="display: block; max-width: 800px">
-  <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
+  <p style="text-align:center;color:black;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
   <img align="middle" src="earth-painted.jpg" style="display:block; max-width:800px">
-  <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p>
+  <p style="text-align:center;color:black;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p>
   <img align="middle" src="fire-painted.jpg" style="display:block; max-width:800px">
-  <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p> 
+  <p style="text-align:center;color:black;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p> 
   <img align="middle" src="water-painted.jpg" style="display:block; max-width:800px">
-  <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
+  <p style="text-align:center;color:black;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
   <img align="middle" src="wormhole.png" style="display:block; max-width: 700px">
-  <p style="text-align:center;color:white;font-family: 'Amatica SC'">"Wormhole Alpha, created by Xolaris on DeviantArt</p>
+  <p style="text-align:center;color:black;font-family: 'Amatica SC'">"Wormhole Alpha, created by Xolaris on DeviantArt</p>
  
 </body>
 </html>  
