--- a/contactus.html
+++ b/contactus.html
@@ -97,7 +97,7 @@ p {
 
 <div style="">
         <div class="dropdown">
-          <h1>Maliha Islam</h1>
+          <p>Maliha Islam</p>
           <div class="dropdown-content">
               <h1>LinkedIn: Maliha Islam <br> Github: malihai1010 <br>Gmail: Maliha1010@gmail.com <br>Snapchat: Maliha1010 </h1>
           </div>
