--- a/contactus.html
+++ b/contactus.html
@@ -50,7 +50,7 @@ h1 {
   text-align: center;
 }
 p {
-  font-family: verdana;
+  font-family: 'Amatica SC';
   font-size: 20px;
   text-align: center;
   align-items: middle;
