--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,9 @@ body {
   font-family:'Amatica SC';
   font-size: 22px; 
   color:black;
+  align-items: middle;
+  align-self: middle;
+  vertical-align:middle;
 }
 
  #menu {
