--- a/contactus.html
+++ b/contactus.html
@@ -97,7 +97,7 @@ p {
 
 <div style="">
         <div class="dropdown">
-          <p>Maliha Islam</p>
+          <span style="text-align:center;color:white;font-size:2vw;font-family: 'Amatica SC'">Maliha Islam</p>
           <div class="dropdown-content">
               <h1>LinkedIn: Maliha Islam <br> Github: malihai1010 <br>Gmail: Maliha1010@gmail.com <br>Snapchat: Maliha1010 </h1>
           </div>
@@ -105,7 +105,7 @@ p {
 <br>
 <br>
         <div class="dropdown">
-          <span>Noelia Cabajal</span>
+          <h1 style="text-align:center;color:white;font-size:2vw;font-family: 'Amatica SC'">Noelia Cabajal</span>
           <div class="dropdown-content">
             <h1> LinkedIn: Noelia Carbajal<br> Github: ncarbajal <br>Gmail: noeliacarbajal04@gmail.com <br>Snapchat: ncarbajal04</h1>
           </div>
