--- a/contactus.html
+++ b/contactus.html
@@ -97,7 +97,7 @@ p {
 
 <div style="">
         <div class="dropdown">
-          <span style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Maliha Islam</p>
+          <p style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Maliha Islam</p>
           <div class="dropdown-content">
               <h1>LinkedIn: Maliha Islam <br> Github: malihai1010 <br>Gmail: Maliha1010@gmail.com <br>Snapchat: Maliha1010 </h1>
           </div>
@@ -105,7 +105,7 @@ p {
 <br>
 <br>
         <div class="dropdown">
-          <h1 style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Noelia Cabajal</span>
+          <h1 style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Noelia Cabajal</h1>
           <div class="dropdown-content">
             <h1> LinkedIn: Noelia Carbajal<br> Github: ncarbajal <br>Gmail: noeliacarbajal04@gmail.com <br>Snapchat: ncarbajal04</h1>
           </div>
@@ -113,7 +113,7 @@ p {
 <br>
 <br>
         <div class="dropdown">
-          <span>Ginevra Godwin</span>
+          <h1 style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Ginevra Godwin</h1>
           <div class="dropdown-content">
             <h1>LinkedIn: <br> Github: <br>Gmail: <br>Snapchat:</h1>
           </div>
@@ -121,7 +121,7 @@ p {
 <br>
 <br>
         <div class="dropdown">
-          <span>Mariana Vazquez</span>
+          <h1 style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Mariana Vazquez</h1>
           <div class="dropdown-content">
             <h1>LinkedIn: Mariana Vazquez <br> Github: Marmar897 <br>Gmail: mariana.vazquez7033@gmail.com <br>Snapchat: Marmar897</h1>
           </div>
