--- a/contactus.html
+++ b/contactus.html
@@ -77,6 +77,12 @@ p {
 .dropdown:hover .dropdown-content {
     display: block;
 }
+body {
+    background-image: url("watercolor.jpg");
+    background-repeat: no-repeat;
+  background-size: cover;
+} 
+    
 </style>
 </head>
     
@@ -97,7 +103,7 @@ p {
 
 <div style="">
         <div class="dropdown">
-          <p style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Maliha Islam</p>
+          <h1 style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Maliha Islam</h1>
           <div class="dropdown-content">
               <h1>LinkedIn: Maliha Islam <br> Github: malihai1010 <br>Gmail: Maliha1010@gmail.com <br>Snapchat: Maliha1010 </h1>
           </div>
