--- a/gallery.html
+++ b/gallery.html
@@ -69,6 +69,12 @@ p {
   align-self: middle;
   vertical-align:middle;
 }
+
+body {
+    background-image: url("watercolor.jpg");
+    background-repeat: no-repeat;
+  background-size: cover;
+}   
 </style>
   
 <head>
