--- a/contactus.html
+++ b/contactus.html
@@ -121,7 +121,7 @@ body {
         <div class="dropdown">
           <h1 style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Ginevra Godwin</h1>
           <div class="dropdown-content">
-            <h1>LinkedIn: <br> Github: <br>Gmail: <br>Snapchat:</h1>
+            <h1>LinkedIn: Ginevra Godwin<br> Github: GGbeeGWC <br>Gmail: ginevrag32@gmail.com <br>Snapchat: genie.bee</h1>
           </div>
         </div>
 <br>
