--- a/mvp.html
+++ b/mvp.html
@@ -4,7 +4,13 @@
 <style>
 
 body {
-  font-family: 'Amatica SC';font-size: 22px;
+  background-image: "starry_forest.jpg";
+  background-color: black;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  font-family: 'Amatica SC';
+  font-size: 22px;
 }
 
 h1 {
@@ -38,7 +44,7 @@ p {
 
 </style>
 
-<body background="forest.jpg" >
+<body background="starry_forest.jpg" >
 
   <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" background-color= "Transparent" align-self= "middle"
   target="_blank" style=color:white>ABOUT THE CREATORS</a>
