--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -169,7 +169,7 @@ body {
         </div>
       </div>
         <div class="zoomin">
-            <img class="circular--square2" src="Happy1.jpg" alt="Ginevra">
+            <img class="circular--square2" src="20160419_155406-1.jpg" alt="Ginevra">
             <h2 style="color:black;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Ginevra</h2>
             <p style="color:black;font-size:1.7vw;text-align:center">I was born on December 29, 2000. I had an amazing childhood and I love that I am going to college soon!. Even though I like the arts like piano and painting, I most definitely want to pursue a tech related major in college after being in this program. This program opened my eyes to the joy of coding and programming so I hope to use this skill to bring my future ideas to life!</p>
         </div>
