--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -177,7 +177,7 @@ body {
         <div class="zoomin">
             <img class="circular--square2" src="mar.jpg" alt="Mariana">
             <h2 style="color:black;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Mariana</h2>
-            <p style="color:black;font-size:1.7vw;text-align:center">I was born on April 9, 2000. I go to Bronx Preparatory Charter School. I have gone to that school for so long, from Fifth grade and am now a senior. My favorite book is The Magicians (I RECOMEND EVERYONE READ IT) I love to dance salsa and eat!</p>
+            <p style="color:black;font-size:1.7vw;text-align:center">I was born on April 9, 2000. I go to Bronx Preparatory Charter School. I have gone to that school for so long, from Fifth grade and am now a senior. My favorite book is The Magicians (I RECOMMEND EVERYONE READ IT) I love to dance salsa and eat!</p>
         </div>
       </div>
         <div class="zoomin">
