--- a/contactus.html
+++ b/contactus.html
@@ -101,7 +101,7 @@ body {
   <h1>GET IN TOUCH WITH A HUMAN<br>(THE CREATORS) <!--<br> Maliha Islam <br> Mariana Vazquez <br> Ginevra Godwin<br> Noelia Cabajal--></h1>
     
 
-<div style="">
+<div style="justify-content:center; align:center;">
         <div class="dropdown">
           <h1 style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Maliha Islam</h1>
           <div class="dropdown-content">
