Update and rename mvp.html to wanderer.html

--- a/wanderer.html
+++ b/wanderer.html
@@ -17,6 +17,11 @@ h1 {
   color: white;
   text-align: center;
 }
+h2 {
+  color: white;
+  text-align: center;
+}
+
 p {
   font-family: verdana;
   font-size: 20px;
@@ -51,9 +56,9 @@ p {
   <body link="white">
   <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
 
-
-  <h1>A Whole world waiting to be discovered...<br>
-    click BEGIN </h1>
+  <h1>WANDERER</h1>
+  <h2>A Whole world waiting to be discovered...<br>
+    click BEGIN </h2>
     <p>
 <a style="font-family: 'Amatica SC';font-size: 22px; color:white;" href="https://malihai1010.github.io/finalproject17/adventure.html" background-color= "Transparent" align-self= "middle"
       target="_blank">BEGIN</a>
