--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -137,7 +137,7 @@ body {
     
 <ul id="menu" class"menu" style="color:white;">
   <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
-  <li><a style="color:white;" class="active" href="mvp.html">Home</a></li>
+  <li><a style="color:white;" class="active" href="wanderer.html">Home</a></li>
   <li><a style="color:white;" class="active" href="aboutuspage.html">About</a></li>
   <li><a style="color:white;" class="active" href="gallery.html">Gallery</a></li>
   <li><a style="color:white;" class="active" href="contactus.html">Contact Us</a></li>
