--- a/gallery.html
+++ b/gallery.html
@@ -84,22 +84,22 @@ body {
 
 <ul id="menu" class"menu" style="color:white;">
   <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
-  <li><a style="color:white;" class="active" href="mvp.html">Home</a></li>
+  <li><a style="color:white;" class="active" href="wanderer.html">Home</a></li>
   <li><a style="color:white;" class="active" href="aboutuspage.html">About</a></li>
   <li><a style="color:white;" class="active" href="gallery.html">Gallery</a></li>
   <li><a style="color:white;" class="active" href="contactus.html">Contact Us</a></li>
 </ul>
   
   <img align="middle" src="air-painted.jpg" style="display: block; max-width: 800px">
-  <p style="text-align:center;color:black;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
+  <p style="color:black;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
   <img align="middle" src="earth-painted.jpg" style="display:block; max-width:800px">
-  <p style="text-align:center;color:black;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p>
+  <p style="color:black;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p>
   <img align="middle" src="fire-painted.jpg" style="display:block; max-width:800px">
-  <p style="text-align:center;color:black;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p> 
+  <p style="color:black;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p> 
   <img align="middle" src="water-painted.jpg" style="display:block; max-width:800px">
-  <p style="text-align:center;color:black;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
+  <p style="color:black;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
   <img align="middle" src="wormhole.png" style="display:block; max-width: 700px">
-  <p style="text-align:center;color:black;font-family: 'Amatica SC'">"Wormhole Alpha, created by Xolaris on DeviantArt</p>
+  <p style="color:black;font-family: 'Amatica SC'">"Wormhole Alpha, created by Xolaris on DeviantArt</p>
  
 </body>
 </html>  
