--- a/wanderer.html
+++ b/wanderer.html
@@ -57,10 +57,9 @@ p {
   <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
 
   <h1>WANDERER</h1>
-  <h2>A Whole world waiting to be discovered...<br>
-    click BEGIN </h2>
+  <h2>A Whole world waiting to be discovered...</h2>
     <p>
-<a style="font-family: 'Amatica SC';font-size: 22px; color:white;" href="https://malihai1010.github.io/finalproject17/adventure.html" background-color= "Transparent" align-self= "middle"
+<a style="font-family: 'Amatica SC';font-size: 28px; color:white;" href="https://malihai1010.github.io/finalproject17/adventure.html" background-color= "Transparent" align-self= "middle"
       target="_blank">BEGIN</a>
 
         <audio autoplay>
