--- a/contactus.html
+++ b/contactus.html
@@ -115,7 +115,7 @@
 <body>
 
   <ul id="menu" class"menu">
-    <li><a class="active" href="mvp.html">Home</a></li>
+    <li><a class="active" href="wanderer.html">Home</a></li>
     <li><a class="active" href="aboutuspage.html">About</a></li>
     <li><a class="active" href="gallery.html">Gallery</a></li>
     <li><a class="active" href="contactus.html">Contact Us</a></li>
