--- a/contactus.html
+++ b/contactus.html
@@ -115,7 +115,7 @@
 <body>
 
   <ul id="menu" class"menu">
-    <li><a class="active" href="wanderer.html">Home</a></li>
+    <li><a class="active" href="mvp.html">Home</a></li>
     <li><a class="active" href="aboutuspage.html">About</a></li>
     <li><a class="active" href="gallery.html">Gallery</a></li>
     <li><a class="active" href="contactus.html">Contact Us</a></li>
@@ -131,7 +131,7 @@
     <div class="dropdown">
       <h1 style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Maliha Islam</h1>
       <div class="dropdown-content">
-        <h1>LinkedIn: Maliha Islam <br> Github: malihai1010 <br>Gmail: Maliha1010@gmail.com <br>Snapchat: Maliha1010 </h1>
+        <h1><span style="color: #007bb5;">LinkedIn</span>: Maliha Islam <br> Github: malihai1010 <br><span style="color: #dd4b39;">Gmail</span>: Maliha1010@gmail.com <br><span style="color:#fffc00 ;">Snapchat</span>: Maliha1010 </h1>
       </div>
     </div>
     <br>
@@ -139,7 +139,7 @@
     <div class="dropdown">
       <h1 style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Noelia Cabajal</h1>
       <div class="dropdown-content">
-        <h1> LinkedIn: Noelia Carbajal<br> Github: ncarbajal <br>Gmail: noeliacarbajal04@gmail.com <br>Snapchat: ncarbajal04</h1>
+        <h1> <span style="color: #007bb5;">LinkedIn</span>: Noelia Carbajal<br> Github: ncarbajal <br><span style="color: #dd4b39;">Gmail</span>: noeliacarbajal04@gmail.com <br><span style="color:#fffc00 ;">Snapchat</span>: ncarbajal04</h1>
       </div>
     </div>
     <br>
@@ -147,7 +147,7 @@
     <div class="dropdown">
       <h1 style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Ginevra Godwin</h1>
       <div class="dropdown-content">
-        <h1>LinkedIn: Ginevra Godwin<br> Github: GGbeeGWC <br>Gmail: ginevrag32@gmail.com <br>Snapchat: genie.bee</h1>
+        <h1><span style="color: #007bb5;">LinkedIn</span>: Ginevra Godwin<br> Github: GGbeeGWC <br><span style="color: #dd4b39;">Gmail</span>: ginevrag32@gmail.com <br><span style="color:#fffc00 ;">Snapchat</span>: genie.bee</h1>
       </div>
     </div>
     <br>
@@ -155,7 +155,7 @@
     <div class="dropdown">
       <h1 style="text-align:center;color:black;font-size:2vw;font-family: 'Amatica SC'">Mariana Vazquez</h1>
       <div class="dropdown-content">
-        <h1>LinkedIn: Mariana Vazquez <br> Github: Marmar897 <br>Gmail: mariana.vazquez7033@gmail.com <br>Snapchat: Marmar897</h1>
+        <h1><span style="color: #007bb5;">LinkedIn</span>: Mariana Vazquez <br> Github: Marmar897 <br><span style="color: #dd4b39;">Gmail</span>: mariana.vazquez7033@gmail.com <br><span style="color:#fffc00 ;">Snapchat</span>: Marmar897</h1>
       </div>
     </div>
   </div>
