--- a/gallery.html
+++ b/gallery.html
@@ -90,7 +90,7 @@ body {
   <li><a style="color:white;" class="active" href="contactus.html">Contact Us</a></li>
 </ul>
   
-  <img align="middle" src="air-painted.jpg" style="display: block; max-width: 800px">
+  <img src="air-painted.jpg" style="display: block; max-width: 800px; text-align:center">
   <p style="color:black;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
   <img align="middle" src="earth-painted.jpg" style="display:block; max-width:800px">
   <p style="color:black;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p>
