--- a/gallery.html
+++ b/gallery.html
@@ -92,14 +92,14 @@ body {
   
   <center><img src="air-painted.jpg" style="display: block; max-width: 800px;"></center>
   <p style="color:black;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
-  <img align="middle" src="earth-painted.jpg" style="display:block; max-width:800px">
+  <center><img align="middle" src="earth-painted.jpg" style="display:block; max-width:800px"></center>
   <p style="color:black;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p>
-  <img align="middle" src="fire-painted.jpg" style="display:block; max-width:800px">
+  <center><img align="middle" src="fire-painted.jpg" style="display:block; max-width:800px"></center>
   <p style="color:black;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p> 
-  <img align="middle" src="water-painted.jpg" style="display:block; max-width:800px">
+  <center><img align="middle" src="water-painted.jpg" style="display:block; max-width:800px"></center>
   <p style="color:black;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
-  <img align="middle" src="wormhole.png" style="display:block; max-width: 700px">
+  <center><img align="middle" src="wormhole.png" style="display:block; max-width: 700px"></center>
   <p style="color:black;font-family: 'Amatica SC'">"Wormhole Alpha, created by Xolaris on DeviantArt</p>
- 
+  <center><img align="middle" src="starryforest.jpg" style="display:block; max-width: 700px"></center>
 </body>
 </html>  
