--- a/gallery.html
+++ b/gallery.html
@@ -100,6 +100,7 @@ body {
   <p style="color:black;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
   <center><img align="middle" src="wormhole.png" style="display:block; max-width: 700px"></center>
   <p style="color:black;font-family: 'Amatica SC'">"Wormhole Alpha, created by Xolaris on DeviantArt</p>
-  <center><img align="middle" src="starryforest.jpg" style="display:block; max-width: 700px"></center>
+  <center><img align="middle" src="starry_forest.jpg" style="display:block; max-width: 700px"></center>
+  <p style="color:black;font-family: 'Amatica SC'">"Bipolar wallpaper By download-wallpaper</p>
 </body>
 </html>  
