--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -181,7 +181,7 @@ body {
         </div>
       </div>
         <div class="zoomin">
-            <img class="circular--square2" src="borzoi.jpg" alt="Noelia">
+            <img class="circular--square2" src="IMG_5624(1).jpg" alt="Noelia">
             <h2 style="color:black;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Noelia</h2>
             <p style="color:black;font-size:1.7vw;text-align:center">Insert you're bio here</p>
         </div>
