--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -183,7 +183,7 @@ body {
         <div class="zoomin">
             <img class="circular--square2" src="IMG_5624.jpg" alt="Noelia">
             <h2 style="color:black;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Noelia</h2>
-            <p style="color:black;font-size:1.7vw;text-align:center">I like ice cream./p>
+            <p style="color:black;font-size:1.7vw;text-align:center">I like ice cream.</p>
         </div>
       </div>
      </div>
