--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -151,8 +151,9 @@ body {
 <div class="zoomin">
 <img class="circular--square" src="GWC.jpg" alt="GWC"> <!--style="width:40vw" "width=400" height=300"-->
 </div>
-<p style="color:black; text-align:center;font-size:2.5vw;font-family: 'Amatica SC';font-weight: bold;">The creators of this website have worked for hours to overcome simple frustrations such as a missing quotation mark or a simple syntax error - frustrations only coders would understand.
-   But through the flames of struggle that we've endured comes this amazing project and as unfinished as it may seem, we are all very proud of it. </p>
+<p style="color:black; text-align:center;font-size:2.5vw;font-family: 'Amatica SC';font-weight: bold;">Growing up is difficult, especially in an ideologically polarized society. With the difficulties presented in recent events such as the Charlottesville riot, the intensity of foreign affairs, and the troubles of daily life, too easily we give into hatred, impatience, and angry passion and lose sight of what is important. We miss the kid who used to believe in heroes and now with Wanderer, heroes do not only exist in books or in the movies. 
+Wanderer is an interactive website that immerses users, one last time, in youthful fancy. We are kids at heart, after all. By bringing fictional universes, such as Lord of the Rings and the wizarding world in Harry Potter, to life, we hope to make users relaxed and help their imaginations run wild. We were particularly inspired by the Pottermore website, which is simply beautiful to visit for its sights and sounds. Wanderer was created using HTML, CSS, and JavaScript for its appearance and functionality. The site features original paintings, which are complemented with colors, music, and galaxy-type backgrounds that add to the illusion of travel. Overall, our aim was to remind users of all that is fantastical, good, and happy in life. ical, and happy. We hope you enjoy Wanderer!
+ </p>
 <br>
 <!--<div style="margin-left:15%;padding:1px 16px;height:1000px;">-->
 
