updated home page

--- a/adventure.html
+++ b/adventure.html
@@ -10,6 +10,7 @@
     <img id="air-img" class="img-styles" src="air-painted.jpg">
   </div>
   <div id="col-right" class="col-right col-display container">
+    <div class="col-right-content-position">
     <div class="arrow" onclick="upNavigation()">
       <i class="fa fa-arrow-up fa-2x" aria-hidden="true"></i>
     </div>
@@ -21,9 +22,13 @@
     <div class="arrow" onclick="downNavigation()">
       <i class="fa fa-arrow-down fa-2x" aria-hidden="true"></i>
     </div>
+  </div>
     <button class="button button1" onclick="changeImage()">SELECT</button>
   </div>
 </div>
+<audio autoplay>
+  <source src="experience.mp3" type="audio/mpeg">
+</audio>
   <script src="custom.js"></script>
 </body>
 </html>
