--- a/wanderer.html
+++ b/wanderer.html
@@ -1,83 +1,94 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-
-body {
-  background-image: "starry_forest.jpg";
-  background-color: black;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  font-family: 'Amatica SC';
-  font-size: 22px;
-}
-
-h1 {
-  color: white;
-  text-align: center;
-  font-size: 50px;
-}
-h2 {
-  color: white;
-  text-align: center;
-  font-size: 33px;
-}
-
-p {
-  font-family: verdana;
-  font-size: 27px;
-  text-align: center;
-  align-items: middle;
-  align-self: middle;
-  vertical-align:middle;
-}
-
-.button {
-  border: none;
-  color: white;
-  padding: 12px 32px;
-  text-align: center;
-  vertical-align: middle;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 12px;
-  margin: 4px 2px;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-  cursor: pointer;
-  font-family: 'Cormorant Garamond';
-  letter-spacing: 2px;
-}
-.button {
-  background-color: transparent;
-  border: 1px solid white;
-}
-.button:hover {
-  background-color: white;
-  color: black;
-
-</style>
-
-<body background="starry_forest.jpg" >
-
-  <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" background-color= "Transparent" align-self= "middle"
-  target="_blank" style=color:white>ABOUT THE CREATORS</a>
-  <body link="white">
   <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
+  <style>
 
-  <h1>WANDERER</h1>
-  <h2>A Whole world waiting to be discovered...</h2>
+  body {
+    font-family: 'Amatica SC';
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+  }
+
+  h1 {
+    margin-top: 0;
+    color: white;
+    text-align: center;
+    font-size: 50px;
+  }
+  h2 {
+    color: white;
+    text-align: center;
+    font-size: 33px;
+  }
+
+  p {
+    font-family: verdana;
+    font-size: 27px;
+    text-align: center;
+    align-items: middle;
+    align-self: middle;
+    vertical-align:middle;
+  }
+
+  .button {
+    border: none;
+    color: white;
+    padding: 12px 32px;
+    text-align: center;
+    vertical-align: middle;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    font-family: 'Cormorant Garamond';
+    letter-spacing: 2px;
+  }
+  .button {
+    background-color: transparent;
+    border: 1px solid white;
+  }
+  .button:hover {
+    background-color: white;
+    color: black;
+  }
+  footer {
+    padding: 50px;
+    color: white;
+    background-color: black;
+    font-size: 12px;
+  }
+  .home {
+    background-image: url("starry_forest.jpg");
+    background-color: black;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    padding-top: 150px;
+  }
+  </style>
+</head>
+
+<body>
+  <div class="home">
+    <h1>WANDERER</h1>
+    <h2>A Whole world waiting to be discovered...</h2>
     <p>
-  <a class="button" style="font-family: 'Amatica SC';font-size: 27px;" href="./adventure.html" background-color= "Transparent" align-self= "middle">BEGIN</a>
-
-
-
-        <audio autoplay>
-          <source src="experience.mp3" type="audio/mpeg">
-          </audio>
-
+      <a class="button" style="font-family: 'Amatica SC';font-size: 27px;" href="./adventure.html" background-color= "Transparent" align-self= "middle">BEGIN</a>
     </p>
-
-  </body>
-  </html>
+  </div>
+  <footer>
+    <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" style=color:white>ABOUT THE CREATORS</a>
+    <a href="https://malihai1010.github.io/finalproject17/gallery.html" style=color:white>GALLERY</a>
+    <a href="https://malihai1010.github.io/finalproject17/contactus.html" style=color:white>CONTACT US</a>
+  </footer>
+  <audio autoplay>
+    <source src="experience.mp3" type="audio/mpeg">
+  </audio>
+</body>
+</html>
