--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -168,7 +168,6 @@ daily life, too easily we give into hatred, impatience, and angry passion and lo
 <p style="color:black; text-align:center;font-size:2vw;font-family: 'Amatica SC'">Let's get a little personal</p>
 <p style="text-align:center;font-size:2vw;font-family: 'Amatica SC'">The creators of this website have worked for hours to overcome simple frustrations such as a missing quotaion mark or a simple syntax error, frustrations only coders would understand.
    But through the flames of struggle that we've endured comes this amazing project and as unfinished as it may seem, we are all very proud of it. </p>
-<p style="text-align:center;font-size:2vw">Let's get a little personal</p>
 
 <div class="container">
     <div class="row">
@@ -195,7 +194,7 @@ daily life, too easily we give into hatred, impatience, and angry passion and lo
         <div class="zoomin">
             <img class="circular--square2" src="noelia.jpg" alt="Noelia">
             <h2 style="color:black;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Noelia</h2>
-            <p style="color:black;font-size:1.7vw;text-align:center">I like ice cream.</p>
+            <p style="color:black;font-size:1.7vw;text-align:center">I was born on July 4, 2000. I go to a boarding school in Massachusetts called Groton. I love cross country and my favorite tv shows are House, M.D and The Office.</p>
         </div>
       </div>
      </div>
