--- a/wanderer.html
+++ b/wanderer.html
@@ -83,7 +83,7 @@
     </p>
   </div>
   <footer>
-    <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" style=color:white>ABOUT THE CREATORS</a>
+    <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" style=color:white; font-size: 27px>ABOUT THE CREATORS</a>
     <a href="https://malihai1010.github.io/finalproject17/gallery.html" style=color:white>GALLERY</a>
     <a href="https://malihai1010.github.io/finalproject17/contactus.html" style=color:white>CONTACT US</a>
   </footer>
