--- a/wanderer.html
+++ b/wanderer.html
@@ -83,9 +83,9 @@
     </p>
   </div>
   <footer>
-    <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" style="color:white; font-size:18px; word-spacing:10px;">ABOUT THE CREATORS</a>
-    <a href="https://malihai1010.github.io/finalproject17/gallery.html" style="color:white; font-size:18px; word-spacing:10px;">GALLERY</a>
-    <a href="https://malihai1010.github.io/finalproject17/contactus.html" style="color:white; font-size:18px; word-spacing:10px;">CONTACT US</a>
+    <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" style="color:white; font-size:18px;">ABOUT THE CREATORS</a>
+    <a href="https://malihai1010.github.io/finalproject17/gallery.html" style="color:white; font-size:18px;">GALLERY</a>
+    <a href="https://malihai1010.github.io/finalproject17/contactus.html" style="color:white; font-size:18px;">CONTACT US</a>
   </footer>
   <audio autoplay>
     <source src="experience.mp3" type="audio/mpeg">
