--- a/wanderer.html
+++ b/wanderer.html
@@ -83,7 +83,7 @@
     </p>
   </div>
   <footer>
-    <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" display:inline-block style="color:white; font-size:18px;">ABOUT THE CREATORS</a>
+    <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" display:inline-block style="color:white; font-size:18px;">ABOUT THE CREATORS &emsp;</a>
     <a href="https://malihai1010.github.io/finalproject17/gallery.html" display:inline-block style="color:white; font-size:18px;">GALLERY</a>
     <a href="https://malihai1010.github.io/finalproject17/contactus.html" display:inline-block style="color:white; font-size:18px;">CONTACT US</a>
   </footer>
