--- a/wanderer.html
+++ b/wanderer.html
@@ -58,6 +58,7 @@
   }
   footer {
     padding: 50px;
+    padding-left: 100px;
     color: white;
     background-color: black;
     font-size: 12px;
