--- a/wanderer.html
+++ b/wanderer.html
@@ -84,6 +84,7 @@
   </div>
   <footer>
     <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" style=color:white>ABOUT THE CREATORS</a>
+       <span>&emsp;</span>
     <a href="https://malihai1010.github.io/finalproject17/gallery.html" style=color:white>GALLERY</a>
     <a href="https://malihai1010.github.io/finalproject17/contactus.html" style=color:white>CONTACT US</a>
   </footer>
